# docs/booking/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/api/bookings": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получает все бронирования для текущего пользователя",
                 "produces": [
                     "application/json"
@@ -35,6 +40,11 @@
         },
         "/api/bookings/cancel": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Удаляет бронирование по ID",
                 "tags": [
                     "bookings"
@@ -70,6 +80,11 @@
         },
         "/api/bookings/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создаёт бронирование для текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -239,6 +254,9 @@
         "booking.BookRequest": {
             "type": "object",
             "properties": {
+                "capacity": {
+                    "type": "integer"
+                },
                 "class_id": {
                     "type": "string"
                 },
@@ -319,6 +337,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Введите токен в формате: Bearer {токен}",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
